[package]
name = "tagparser"
description = "Extract any tags from html page"
version = "0.3.0"
edition = "2021"
rust-version = "1.72.0"
repository = "https://github.com/tenqz/tagparser"
readme = "README.md"
keywords = ["cli", "web", "parser", "parse", "html"]
categories = ["parsing", "web-programming", "command-line-utilities"]
license = "MIT"
documentation = "https://docs.rs/tagparser"
exclude = ["tests/", ".github/", ".gitignore"]

[lib]
name = "tagparser"
path = "src/lib.rs"

[[bin]]
name = "tagparser"
path = "src/main.rs"

[dependencies]
regex = "1.10.2"
