[package]
name = "tagparser"
version = "0.6.0"
edition = "2021"
description = "A lightweight Rust library for parsing HTML tags with powerful filtering capabilities"
license = "MIT"
repository = "https://github.com/tenqz/tagparser"
readme = "README.md"
keywords = ["html", "parser", "tag", "web", "scraping"]
categories = ["parsing", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tagparser"
path = "src/lib.rs"

[[bin]]
name = "tagparser"
path = "src/main.rs"

[dependencies]
regex = "1.10.2"
